--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <div class="my-5">
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
-          <h1 class="text-body-emphasis">Full-width jumbotron</h1>
-          <p class="col-lg-8 mx-auto lead">
-            This takes the basic jumbotron above and makes its background edge-to-edge with a <code>.container</code> inside to align content. Similar to above, it's been recreated with built-in grid and utility classes.
-          </p>
+          <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
+          <img class="profile-img mt-5" src="./images/Testimonial_Dog_Profile.jpeg" alt="Dog profile">
+          <p class="col-lg-8 mx-auto lead mt-2">
+            Pebbles, New York</p>
         </div>
       </div>
     </div>
