--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
           <p class="col-lg-8 mx-auto lead mt-2">
             Pebbles, New York</p>
         </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/techcrunch.png" alt="techcrunch" height="30">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/mashable.png" alt="mashable" height="30">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/bizinsider.png" alt="bizinsider" height="30">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/tnw.png" alt="tnw" height="30">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
